# cx-studio-tk

./: .gitignore  AGENTS.md  README.en_US.md  README.md  cx-studio-tk.code-workspace  main.py  pyproject.toml  pyrightconfig.json
_recycler/: help_info.py  multiprogress_manager.py
_recycler/ffmpeg/: cx_affmpeg.py
tests/: test_cx_datapackage.py  test_cx_filesize.py  test_cx_time.py  test_datapackage.py  test_tag_replacer.py
