[project]
name = "cx-studio-tk"
version = "0.7.0"
description = "Add your description here"
readme = "README.md"
# requires-python = ">=3.12,<3.14"
dependencies = ["cx-studio", "cx-wealth", "cxalio-studio-tools"]

[tool.uv.sources]
cx-studio = { workspace = true }
cx-wealth = { workspace = true }
cxalio-studio-tools = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/cx-studio",
    "packages/cxalio-studio-tools",
    "packages/cx-wealth",
]

[dependency-groups]
dev = ["black>=25.1.0"]

# [tool.pytest.ini_options]
# minversion = "6.0"
# testpaths = ["tests"]
# addopts = "-ra -q"
