[project]
name = "cx-studio-tk"
description = "Cxalio 影视后期制作工具集 — workspace 容器"
requires-python = ">=3.12,<3.15"
version = "0.0.0"
dependencies = ["cx-studio", "cx-wealth", "cxalio-studio-tools"]

[tool.uv]
package = false

[tool.uv.sources]
cx-studio = { workspace = true }
cx-wealth = { workspace = true }
cxalio-studio-tools = { workspace = true }

[tool.uv.workspace]
members = [
    "packages/cx-studio",
    "packages/cxalio-studio-tools",
    "packages/cx-wealth",
]

[dependency-groups]
dev = [
    "babel>=2.18.0",
    "black>=25.1.0",
]

# [tool.pytest.ini_options]
# minversion = "0.0.0"
# testpaths = ["tests"]
# addopts = "-ra -q"
